# zappy

./: .clang-tidy  .coverage  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  Makefile  coverage.xml  pyproject.toml  sonar-project.properties  zappy_ai
common/Network/: CMakeLists.txt  Exceptions.cpp  Exceptions.hpp
common/Network/Client/: ClientLoop.cpp  ClientLoop.hpp  Connection.cpp  Connection.hpp
common/Network/Server/: Client.cpp  Client.hpp  PollLoop.cpp  PollLoop.hpp
common/Network/Socket/: ISocket.hpp  RealSocket.cpp  RealSocket.hpp  TcpSocket.cpp  TcpSocket.hpp
common/Rpc/: CMakeLists.txt
common/Rpc/Client/: RPCClient.cpp  RPCClient.hpp  ResponseDispatcher.cpp  ResponseDispatcher.hpp
common/Rpc/Message/: IMessage.cpp  IMessage.hpp  MessageParser.cpp  MessageParser.hpp  RPCMessage.cpp  RPCMessage.hpp  TypedMessage.hpp  WireFormat.cpp  WireFormat.hpp
common/Rpc/Server/: Dispatcher.hpp  RPCServer.hpp
common/Rpc/Session/: Session.hpp
common/Schema/: CMakeLists.txt  Schema.hpp  SchemaError.cpp  SchemaError.hpp  Tokenizer.cpp  Tokenizer.hpp
common/Schema/Fields/: BoundedNumberFieldType.cpp  BoundedNumberFieldType.hpp  Fields.hpp  IFieldType.hpp  LongStringFieldType.cpp  LongStringFieldType.hpp  NumberFieldType.cpp  NumberFieldType.hpp  StringFieldType.cpp  StringFieldType.hpp
gui/: CMakeLists.txt  GuiConfig.hpp  NetworkManager.cpp  main.cpp
gui/App/: Application.cpp  Application.hpp  GameSession.cpp  GameSession.hpp
gui/Bindings/: KeyBindings.cpp  KeyBindings.hpp
gui/Cli/: ArgsParser.cpp  ArgsParser.hpp  LaunchMode.cpp  LaunchMode.hpp
gui/Exceptions/: GuiException.cpp  GuiException.hpp  HandshakeException.cpp  HandshakeException.hpp  HandshakeMessages.hpp  WorldInitException.cpp  WorldInitException.hpp  WorldInitMessages.hpp
gui/Menu/: KeyBindingsDialog.cpp  KeyBindingsDialog.hpp  MenuButton.cpp  MenuButton.hpp  MenuCamera.cpp  MenuCamera.hpp  MenuConfig.hpp  MenuScreen.cpp  MenuScreen.hpp  PortInputDialog.cpp  PortInputDialog.hpp
gui/Menu/Button/: MenuButton.cpp  MenuButton.hpp
gui/Menu/Camera/: MenuCamera.cpp
gui/Menu/Dialogs/: KeyBindingsDialog.cpp  KeyBindingsDialog.hpp  PortInputDialog.cpp  PortInputDialog.hpp
gui/Network/: CommandSender.cpp  CommandSender.hpp  ConnectionBootstrap.cpp  ConnectionBootstrap.hpp  INetworkClient.hpp  MessageParser.cpp  NetworkManager.cpp  NetworkManager.hpp  ServerHandshake.cpp  ServerHandshake.hpp  SessionConnector.cpp  SessionConnector.hpp
gui/Network/Parsing/: EggHandlers.cpp  EggHandlers.hpp  HandlerTypes.hpp  Handlers.hpp  MapHandlers.cpp  MapHandlers.hpp  MessageParser.cpp  MessageParser.hpp  ParsingUtils.cpp  ParsingUtils.hpp  PlayerHandlers.cpp  PlayerHandlers.hpp  ServerHandlers.cpp  ServerHandlers.hpp
gui/Render/: EggRenderer.cpp  PlayerRenderer.cpp  PlayerRenderer.hpp  PlayerRendererConfig.hpp  Raygui.cpp  RenderUtils.cpp  RenderUtils.hpp  SkyRenderer.cpp  SkyRenderer.hpp  SpeedControl.cpp  SpeedControl.hpp  TileGridConfig.hpp  TileGridRenderer.cpp  TileGridRenderer.hpp  WindowConfig.hpp  WorldCamera.cpp  WorldCamera.hpp  WorldRenderer.cpp  WorldRenderer.hpp
gui/Render/EndScreen/: EndScreen.cpp  EndScreen.hpp  EndScreenConfig.hpp
gui/Render/Entity/: EggRenderer.cpp  EggRenderer.hpp  EggRendererConfig.hpp  EntityRendererFactory.cpp  EntityRendererFactory.hpp  IEntityRenderer.hpp  IncantationRenderer.cpp  IncantationRenderer.hpp  IncantationRendererConfig.hpp  PlayerChevron.cpp  PlayerChevron.hpp  PlayerPicker.cpp  PlayerPicker.hpp  PlayerRenderer.cpp  PlayerRenderer.hpp  (+6 more)
gui/Theme/: Theme.hpp
gui/World/: MockWorld.cpp  WorldInitializer.cpp  WorldInitializer.hpp  WorldQuery.cpp  WorldQuery.hpp  WorldState.hpp
gui/include/: NetworkManager.hpp  ServerHandshake.hpp  WindowConfig.hpp  raygui.h
gui/src/: MockWorld.cpp  NetworkManager.cpp  Raygui.cpp  ServerHandshake.cpp
ia/: config.py  (+2 more)
server/: CMakeLists.txt  main.c  main.cpp
server/App/: ActionCosts.cpp  ActionCosts.hpp  ArgsParser.cpp  ArgsParser.hpp  GameServer.cpp  GameServer.hpp  ServerConfig.hpp  TimeUnit.cpp  TimeUnit.hpp
server/Cli/: ArgsParser.cpp  ArgsParser.hpp  ArgumentCursor.cpp  ArgumentCursor.hpp
server/Net/: ActionQueue.cpp  ActionQueue.hpp  AiActionPipeline.cpp  AiActionPipeline.hpp  ClientContext.hpp  GuiQueryHandlers.cpp  GuiQueryHandlers.hpp
tests/: CMakeLists.txt  coverage.sh
tests/App/: TestActionCosts.cpp  TestGameServerAiCommands.cpp  TestGameServerHandshake.cpp  TestTimeUnit.cpp
tests/Cli/: TestArgsParser.cpp  TestParserException.cpp
tests/Gui/: TestArgsParser.cpp  TestCommandSender.cpp  TestEggRenderer.cpp  TestMessageParser.cpp  TestParserException.cpp  TestPlayerSelection.cpp  TestServerHandshake.cpp  TestSpeedControl.cpp  TestTeamProgress.cpp  TestWorldInitializer.cpp  TestWorldInitializerIntegration.cpp
tests/IA/: conftest.py  test_bot.py  test_buffer.py  test_client.py  test_collect_state.py  test_command_queue.py  test_coordination_state.py  test_eat_state.py  test_elevation.py  test_enum.py  test_exploration_state.py  test_incantation_state.py  test_inventory.py  test_look.py  test_main.py  test_navigation.py  test_player_spawner.py  test_survival_state.py
tests/Loot/: TestLootService.cpp  TestResourceDensity.cpp
tests/Net/: TestActionQueue.cpp  TestAiActionPipeline.cpp  TestGuiEventBroadcaster.cpp  TestGuiQueryHandlers.cpp
tests/Network/: TestClient.cpp  TestClientLoop.cpp  TestConnection.cpp  TestExceptions.cpp  TestPollLoop.cpp  TestRealSocket.cpp
tests/Rpc/: TestRPCClient.cpp  TestRPCServer.cpp  TestResponseDispatcher.cpp  TestServerPreDispatch.cpp  TestTcpSocket.cpp  TestWireFormat.cpp
tests/Scheduler/: TestActionTiming.cpp  TestScheduler.cpp
tests/Schema/: TestBoundedNumberFieldType.cpp
tests/World/: TestBroadcast.cpp  TestDirection.cpp  TestEjection.cpp  TestElevationRequirements.cpp  TestHungerConstants.cpp  TestIncantation.cpp  TestInventory.cpp  TestMap.cpp  TestMovement.cpp  TestObservation.cpp  TestPlayer.cpp  TestPlayerRegistry.cpp  TestResourceTransfer.cpp  TestResourceType.cpp  TestTeam.cpp  TestTeamRegistry.cpp  TestTile.cpp  TestVictory.cpp
(+182 files in other folders)
